--- a/configs/PS-Configs/03-Playbooks/web_db.yaml
+++ b/configs/PS-Configs/03-Playbooks/web_db.yaml
@@ -1,13 +1,34 @@
 ---
 - hosts: webservers
   sudo: yes
+  vars:
+    http_port: 80
+    doc_dir: /ansible
+    doc_root: /var/www/html/ansible
+    max_clients: 5
+  vars_prompt:
+    - name: username
+      prompt: What is your name? What is your Quest? What is your fav color?
 
   tasks:
   - name: Ensure Apache is installed
     yum: name=httpd state=present
+    when: ansible_os_family == "RedHat"
 
   - name: Start Apache Service
     service: name=httpd enabled=yes state=started
+
+  - name: Deploy Apachec Configuration File
+    template: src=templates/httpd.j2 dest=/etc/httpd/httpd.conf
+    notify: 
+      - Restart Apache
+
+  - name: Copy Site Files
+    template: src=templates/index.j2 dest={{ doc_root }}/index.html
+
+  handlers: 
+    - name: Restart Apache
+      service: name=httpd state=restarted
 
 - hosts: dbservers
   sudo: yes
@@ -15,6 +36,7 @@
   tasks:
   - name: Ensure MySQL installed
     yum: name=mysql-server state=present
+    when: ansible_os_family == "RedHat"
 
   - name: Start MySql Service
     service: name=mysqld enabled=yes state=started
