--- a/ANSI-PBs/LA02-PB/05-vars-demo.yml
+++ b/ANSI-PBs/LA02-PB/05-vars-demo.yml
@@ -1,2 +1,14 @@
 --- # Playbook - 05 - Variables Demo
-- hosts: 
+- hosts: web
+  user: ansible
+  sudo: yes
+  connection: ssh
+  gather_facts: no
+  vars:
+    playbook_version: 0.1
+  vars_files:
+    - conf/copyright.yml
+    - conf/webdefaults.yml
+  vars_prompt:
+    - name: web_domain
+      prompt: Web Domain
