--- a/ANSI-PBs/LA02-PB/07-handlers-demo.yml
+++ b/ANSI-PBs/LA02-PB/07-handlers-demo.yml
@@ -16,6 +16,8 @@
     - name: Install Web Server
       yum: name=httpd state=latest
       notify: Restart HTTPD
+    - name: Install Lynx browser
+      yum: name={{ pkg_lynx }} state=latest
   handlers:
     - name: Restart HTTPD
       service: name=httpd state=restarted
