--- a/ANSI-PBs/LA02-PB/20-Include/webstuff.yml
+++ b/ANSI-PBs/LA02-PB/20-Include/webstuff.yml
@@ -9,5 +9,6 @@
   tasks:
   - include: packages/packages.yml
   - include: commands/commands.yml
+  handlers:
   - include: handlers/handlers.yml
 ...
