--- a/ANSI-PBs/web-ha/web-ha.yml
+++ b/ANSI-PBs/web-ha/web-ha.yml
@@ -22,3 +22,12 @@
   become_user: root
   roles:
   - { role: nginx }
+- hosts: control01
+  remote_user: vagrant
+  become: yes
+  become_user: root
+  tasks:
+  - name: Verify LoadBalancing
+    shell: for i in {1..3}; do curl 192.168.1.50; done
+    register: result
+    debug: var=result["stdout"]
