--- a/ANSI-PBs/web-ha/web-ha.yml
+++ b/ANSI-PBs/web-ha/web-ha.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: all
-  remote_user: vagrant
+  remote_user: jenkins
   become: yes
   become_user: root
   tasks:
@@ -11,19 +11,19 @@
     - python
     - net-tools
 - hosts: control01
-  remote_user: vagrant
+  remote_user: jenkins
   become: yes
   become_user: root
   roles:
   - { role: ha-proxy }
 - hosts: web-nodes
-  remote_user: vagrant
+  remote_user: jenkins
   become: yes
   become_user: root
   roles:
   - { role: nginx }
 - hosts: control01
-  remote_user: vagrant
+  remote_user: jenkins
   become: yes
   become_user: root
   tasks:
