--- a/ANSI-PBs/web-ha/web-ha.yml
+++ b/ANSI-PBs/web-ha/web-ha.yml
@@ -30,4 +30,4 @@
   - name: Verify LoadBalancing
     shell: for i in {1..3}; do curl 192.168.1.50; done
     register: result
-    debug: var=result["stdout"]
+  - debug: var=result["stdout"]
