--- a/ANSI-PBs/tcc/roles/primary/tasks/main.yml
+++ b/ANSI-PBs/tcc/roles/primary/tasks/main.yml
@@ -5,8 +5,8 @@
 - name: Copy Web Config Files
   file: src={{ item }} dest=/etc/httpd/conf.d/{{ item }}
   with_items:
-    file1.conf
-    file2.conf
+  - file1.conf
+  - file2.conf
   notify: Restart HTTPD
 - name: Copy Cron file
   file: src=wsapp.cron dest=/var/spool/cron/wsapp
